<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World!</string>
    <string name="app_name">zAlert</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="LoginBtn">Login</string>
    <string name="SignupBtn">Sign Up</string>
    <string name="LogoutBtn">Log Out</string>
    <string name="Welcome">Welcome!</string>
    <string name="email">Email</string>
    <string name="cPassword">Confirm Password</string>
    <string name="action_settings">settings</string>
    <string name="search">Search</string>
    <string name="title_activity_single_item">zAlert</string>
    <string name="hello_world">Hello world!</string>

</resources>